--- a/1.html
+++ b/1.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html>
+<link rel="stylesheet" href="style.css">
   <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
   </head>
+  <script src="colors.js"></script>
   <body>
     <h1><a href="index.html">WEB</a></h1>
+    <input id="night_day" type="button" value="night" onclick="
+      nightDayHandler(this);
+    ">
+    <div id="grid">
     <ol>
       <li><a href="1.html">html</a></li>
       <li><a href="2.html">css</a></li>
-      <li><a href="3.html">javascript</a></li>
-    </ol>
+      <li><a href="3.html">javascript</a></li></ol>
+    <div id="article">
     <h2>HTML이란 무엇인가?</h2>
     <p>
       <a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
@@ -21,5 +27,7 @@
       With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page.
       It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
     </p>
+  </div>
+  </div>
   </body>
 </html>
