--- a/index.html
+++ b/index.html
@@ -3,17 +3,40 @@
   <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
+  <script src="colors.js"></script>
   <body>
     <h1><a href="index.html">WEB</a></h1>
+    <input id="night_day" type="button" value="night" onclick="
+      nightDayHandler(this);
+    ">
+    <div id="grid">
     <ol>
       <li><a href="1.html">html</a></li>
       <li><a href="2.html">css</a></li>
       <li><a href="3.html">javascript</a></li>
     </ol>
+
+    <!--
+    <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+    <ol>
+      <li><a href="1.html"><font color="red">html</font></a></li>
+      <li><a href="2.html"><font color="red">css</font></a></li>
+      <li><a href="3.html"><font color="red">javascript</font></a></li>
+    </ol>
+    -->
+    <div id="article">
+    <p>
+      <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/sSbqWwxN0K8?rel=0"
+      frameborder="0" allow="autoplay; encrypted-media"
+      allowfullscreen></iframe>
+    </p>
     <h2>WEB이란 무엇인가?</h2>
     <p>
       main page 입니다.
     </p>
+  </div></div>
   </body>
 </html>
