--- a/3.html
+++ b/3.html
@@ -12,6 +12,7 @@
     <input id="night_day" type="button" value="night" onclick="
       nightDayHandler(this);
     ">
+    <div id="grid">
     <ol>
       <li><a href="1.html">html</a></li>
       <li><a href="2.html">css</a></li>
